# Marketbeat_CFM_Extended

./: .gitignore  README.md  Stocks_Group_17.csv  Team_17_Assignment.ipynb  Team_XX_Assignment.ipynb  Tickers_multiasset.csv  pyproject.toml  sp500_fallback.csv
.ipynb_checkpoints/: Team_17_Assignment-checkpoint.ipynb
backtest_results/: equity_curve_2023-01-01_2023-08-01.csv  equity_curve_2023-08-01_2024-03-01.csv
scripts/: register_schedule.ps1
src/raam/: __init__.py  backtest.py  backtest_cli.py  broker.py  cli.py  config.py  dashboard.py  dashboard_cli.py  dashboard_data.py  data.py  factors.py  history.py  history_cli.py  portfolio.py  strategy.py  sweep.py  sweep_cli.py  trade_cli.py  universe.py
sweep_results/: sweep_results_full.csv  sweep_results_summary.csv
sweep_results_sp500/: sweep_results_full.csv  sweep_results_summary.csv
tests/: test_backtest.py  test_broker.py  test_dashboard_data.py  test_data.py  test_factors.py  test_history.py  test_portfolio.py  test_sweep.py  test_universe.py
