[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "raam"
version = "0.1.0"
description = "Ranked Asset Allocation Model (RAAM) - rules-based multi-factor portfolio strategy"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
plots = ["matplotlib>=3.7"]
broker = ["alpaca-py>=0.33"]
dashboard = ["streamlit>=1.35"]
dev = ["pytest>=8.0"]

[project.scripts]
raam = "raam.cli:main"
raam-history = "raam.history_cli:main"
raam-trade = "raam.trade_cli:main"
raam-dashboard = "raam.dashboard_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
